@@ -159,7 +159,12 @@ set_attributes (int fd, int baud_rate, MonoParity parity, int dataBits, MonoStop
 	/* setup baudrate */
 	switch (baud_rate)
 	{
-/*This is not defined on OSX and *BSD */
+/*Some values are not defined on OSX and *BSD */
+#if defined(B921600)
+	case 921600:
+	    baud_rate = B921600;
+	    break;
+#endif
 #if defined(B460800)
 	case 460800:
 	    baud_rate = B460800;
