@@ -1,3 +1,9 @@
+2010-02-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>
+
+	* serial.cs: Add 921600 to the list of possible baud rates, and
+	use it only if defined, as is not available in all the unix systems.
+	Fixes #445520.
+
 2010-01-28 Gonzalo Paniagua Javier <gonzalo@novell.com>
 
 	* zlib-helper.c: no need for sync flush when compressing.
